--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/supporting-documents/supporting-documents.component.html
@@ -131,7 +131,7 @@
       <div class="row">
         <div class="col-md-8">
           <app-dfa-attachment
-            title="OtherSuporting Documents (Optional)"
+            title="Other Supporting Documents (Optional)"
             description="If applicable, you may include additional documents related to your application."
             requiredFile="no"
             [allowedFileTypes]="allowedFileTypes"
@@ -156,7 +156,7 @@
       <div class="row">
         <div class="col-md-8">
           <app-dfa-attachment
-            title="OtherSuporting Documents (Optional)"
+            title="Other Supporting Documents (Optional)"
             description="If applicable, you may include additional documents related to your application."
             requiredFile="no"
             [allowedFileTypes]="allowedFileTypes"
