--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -1,6 +1,9 @@
 <mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
+    <p class="sub-heading" style="font-size: 20px">Application Type & Insurance</p>
+    <br/>
+
     <form [formGroup]="appTypeInsuranceForm">
 
       <ng-container>
