--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.scss
@@ -16,3 +16,19 @@ mat-form-field {
     font-weight: 700;
     color: #169bd5;
 }
+
+.contentStyle {
+  border: 1px solid lightgrey;
+  padding: 10px
+}
+
+.nameMessage {
+  border: 2px solid lightgrey;
+  font-weight: bold;
+  color: #169bd5;
+  padding: 10px;
+}
+
+.info-detail {
+  padding: 10px;
+}
