--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -218,7 +218,7 @@
 
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
-          <div class="col-md-6 card-heading">Current Contact Address</div>
+          <div class="col-md-6 card-heading">Mailing Address</div>
           <div class="col-md-2">
             <button
               class="edit-image"
