--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/profile-verification/profile-verification.component.html
@@ -393,7 +393,7 @@
                       profileVerificationForm.get('profile.contactDetails.cellPhoneNumber').invalid &&
                       profileVerificationForm.get('profile.contactDetails.cellPhoneNumber').hasError('maxLength')
                     "
-                    >Maximum length is 100</mat-error
+                    >Maximum length is 12</mat-error
                   >
                   <mat-error
                     *ngIf="
@@ -409,7 +409,7 @@
 
             <div class="row info-detail">
               <div class="col-md-3">
-                <span>Cellular Telephone Number:</span>
+                <span>Residence Telephone Number:</span>
               </div>
               <div class="col-md-3">
                 <mat-form-field appearance="outline">
@@ -426,7 +426,7 @@
                       profileVerificationForm.get('profile.contactDetails.residencePhone').invalid &&
                       profileVerificationForm.get('profile.contactDetails.residencePhone').hasError('maxLength')
                     "
-                    >Maximum length is 100</mat-error
+                    >Maximum length is 12</mat-error
                   >
                   <mat-error
                     *ngIf="
@@ -458,7 +458,7 @@
                       profileVerificationForm.get('profile.contactDetails.alternatePhone').invalid &&
                       profileVerificationForm.get('profile.contactDetails.alternatePhone').hasError('maxLength')
                     "
-                    >Maximum length is 100</mat-error
+                    >Maximum length is 12</mat-error
                   >
                   <mat-error
                     *ngIf="
