--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.scss
@@ -31,3 +31,79 @@
   color: white;
   /*border: 1px solid lightgrey !important;*/
 }
+
+.nocircle {
+  height: 12px;
+  float: left;
+  padding-left: 10%;
+  margin-right: 24px;
+  margin-top: 60px;
+}
+
+.circle {
+  /*width: 100px;*/
+  height: 12px;
+  border-bottom: 2px solid black;
+  float: left;
+  padding-left: 9%;
+  margin-right: 24px;
+  margin-top: 60px;
+}
+
+.stepsDesc {
+  /*width: 100px;*/
+  height: 12px;
+  float: left;
+  padding-left: 9%;
+  margin-right: 24px;
+  margin-top: 30px;
+}
+
+.youAreHere {
+  background-color: #faf1c9;
+  padding: 4px;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 12px;
+  display: table-row;
+}
+
+.stepText {
+  color: #02029d;
+  font-size: 14px;
+  display: inline-flex;
+}
+
+@media (max-width: 1100px) and (min-width: 300px) {
+  .nocircle {
+    height: 12px;
+    float: left;
+    padding-left: 9%;
+    margin-right: 20px;
+    margin-top: 60px;
+  }
+
+  .circle {
+    /*width: 100px;*/
+    height: 12px;
+    border-bottom: 2px solid black;
+    float: left;
+    padding-left: 8%;
+    margin-right: 24px;
+    margin-top: 60px;
+  }
+
+  .stepsDesc {
+    /*width: 100px;*/
+    height: 12px;
+    float: left;
+    padding-left: 8%;
+    margin-right: 20px;
+    margin-top: 30px;
+  }
+
+  .youAreHere {
+    display: flex;
+    width: 70px;
+  }
+}
